When parsing Descriptions() GUI ignores lines with >= 4 spaces. Tidy old format descriptions.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3809 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2010-0628 Chris Morley
+	
+	* src/GUI/optswx.cpp: when using Description() strings to construct
+	GUI option checkboxes, ignore lines with 4 or more leading spaces
+	within each option list. Allows better formatted documentation, as
+	proposed by Noel.
+	
+	* src/formats/*format.cpp: remove remaining continuation characters
+	in Description()s and replace by concatinated ""..." ""..."	
+
 2010-06-24 Chris Morley
 
 	* src/formats/mdlformat.cpp:Prevent unnecessary error message with
