--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-06-29 Noel O'Boyle
 
+	* CMakeLists.txt: Avoid warnings with MinGW when compiling the exes
+
+2010-06-29 Noel O'Boyle
+
 	* src/formats/*format.cpp, src/formats/xml/*format.cpp: Edit some
 	Descriptions() to replace Input with Read and Output with Write. Also
 	uppercased any "options" to "Options".
