babel -H no longer lists all formats
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3816 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2010-06029 Chris Morley
+
+	* tools/babel.cpp, tools/obabel.cpp: -H no longer lists all formats
+	  (As suggested by Noel)
+	
+	* include/openbabel/plugin.h: correct small error causing warning
+	
+	* src/format.cpp, src/plugin.cpp: small formatting changes in List
+	output.
+
 2010-06-29  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/charges/qeq* src/charges/qtpie* data/qeq.txt: Move QEq and
