THANKS, authors.txt: Added myself to contributors
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3826 71e0b675-c112-0410-beda-96664073b5c2

--- a/authors.txt
+++ b/authors.txt
@@ -22,3 +22,4 @@ jballanc = Joshua Ballanco <Joshua.Ballanco@stevens.edu>
 bherger = Brian Herger <bherger@users.sourceforge.net>
 reg8 = Richard Gillilan <reg8@cornell.edu>
 pspendrin = Patrick Spendrin <ps_ml@gmx.de>
+annulen = Konstantin Tokarev <annulen@yandex.ru>
