--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-05  Konstantin Tokarev <annulen@yandex.ru>
+
+	* THANKS, authors.txt: Added myself to contributors
+
 2010-07-04  Noel O'Boyle
 	
 	* src/formats/*format.cpp: Added text from wiki formats [F-Z] to their
