* src/oberror.cpp: Fix from Seth Alves to initialize stream         buffers (from Valgrind).
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3831 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@
 	autoconf anymore). Generate ob.tag file for projects generating
 	doxygen documentation with Open Babel symbols (e.g., Avogadro).
 
+	* src/oberror.cpp: Fix from Seth Alves to initialize stream
+	buffers (from Valgrind).
+
 2010-07-05  Konstantin Tokarev <annulen@yandex.ru>
 
 	* THANKS, authors.txt: Added myself to contributors
