* include/openbabel/forcefield.h: Fix memory leak identified by VLD
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3836 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-06  Noel O'Boyle
+
+	* include/openbabel/forcefield.h: Fix memory leak identified by VLD
+
 2010-07-05  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/forcefields/forcefielduff.cpp: Revert changes and parse
