--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-07-06  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* include/inchi103, src/formats/inchi103: Import final InChI 1.03
+	release.
+
 2010-07-06  Noel O'Boyle
 
 	* include/openbabel/forcefield.h: Fix memory leak identified by VLD
