* src/formats/gamessukformat.cpp, CMakeLists.txt: Enable GAMESS-UK 	format under MSVC (uses std::tr1::regex instead of regex.h
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3840 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-07-06  Noel O'Boyle
+
+	* src/formats/gamessukformat.cpp, CMakeLists.txt: Enable GAMESS-UK
+	format under MSVC (uses std::tr1::regex instead of regex.h)
+
 2010-07-06  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* include/inchi103, src/formats/inchi103: Import final InChI 1.03
