* test/buildertest.cpp: Test for Noel's builder/ring.cpp         crash. Currently passes on Mac because of clearing flags. See code         comments for details.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3848 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,26 +1,32 @@
+2010-07-08  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* test/buildertest.cpp: Test for Noel's builder/ring.cpp
+	crash. Currently passes on Mac because of clearing flags. See code
+	comments for details.
+
 2010-07-08  Chris Morley
 
 	* src/ops/sort.cpp(Do): replace stringstream by istringstream.
 	A reference to stringstream is apparently not a reference to istream
-	in g++, although is is in MSVC. 
+	in g++, although is is in MSVC.
 
 2010-07-07  Chris Morley
 
 	* include/openbabel/descriptor.h, src/descriptor.cpp:
-	Allow descriptors to have a parameter. External code which 
+	Allow descriptors to have a parameter. External code which
 	defines new descriptors will need modifying (an extra parameter
 	on three functions. External code which just uses descriptors
 	is compatible.
-	
+
 	* include/openbabel/groupcontrib.h,src/descriptors/groupcontrib.cpp,
 	src/descriptors/cansmidescriptor.cpp,src/descriptors/inchidescriptor.cpp,
 	src/descriptors/smartsdescriptors.cpp:	make compatible.
-	
+
  	* src/ops/sort.cpp: mods so that a parameter will be recognised
- 	
+
 	* src/descriptors/filters.cpp: make compatible and add a useless example
-	(commented out) which uses a parameter.	
-	
+	(commented out) which uses a parameter.
+
 2010-07-07  Noel O'Boyle
 
 	* windows-vc2008/include/*, windows-vc2008/libs/i386/*: Add include
