Correct alias line spacing in mdlformat.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3897 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-07-22 Chris Morley
+
+	*src/formats/mdlformat.cpp: right align atom numbers in A line, as
+	prompted by Igor Filippov.
+	
+	* include/openbabel/tokenst.h: add functor to help withr deleting
+	containers of pointers.
+
 2010-07-21  Noel O'Boyle
 
 	* include/openbabel/math/align.h: Add Doxygen docs. Update the default
