--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2010-07-26  Noel O'Boyle
 
+	* CMakeLists.txt, src/formats/CMakeLists.txt: Conditionally compile
+	gamessukformat.cpp only if MSVC or has regex.h. (Fix for MinGW
+	compilation)
+
+2010-07-26  Noel O'Boyle
+
 	* scripts/CMakeLists.txt, openbabel-python.i: Pass -DHAVE_EIGEN2 to swig
 	and conditionally generate bindings for conformersearch.h.
 
