* include/openbabel/rotor.h: Fix memory leak in AddRotor
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3913 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-29  Noel O'Boyle
+
+	* include/openbabel/rotor.h: Fix memory leak in AddRotor
+
 2010-07-28  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* test/sdfcansmitest.cpp: Added new unit test suggested by TJ
