* include/openbabel/chargemodel.h: Improved documentation, added         method to retrieve dipole moment (with scaling).
        * src/charges/*: Add scaling factors calculated from regression
        across NCI, Zinc, and other subsets (~1000 molecules).



git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3917 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,12 @@
 	"bracket" elements, e.g., [n] for a fall-back. Fixes one failure
 	from sdfcansmi unit test.
 
+	* include/openbabel/chargemodel.h: Improved documentation, added
+	method to retrieve dipole moment (with scaling).
+
+	* src/charges/*: Add scaling factors calculated from regression
+	across NCI, Zinc, and other subsets (~1000 molecules).
+
 2010-07-29  Noel O'Boyle
 
 	* include/openbabel/rotor.h: Fix memory leak in AddRotor
