Add formula descriptor and --addindex
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3924 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,15 @@
 2010-08-02 Chris Morley
+
+	* src/descriptors/filters.cpp: add new formula descriptor
+
+	* src/transform.cpp: remove --addformula, use --append formula
+	  Make -s option do nothing if parameter is empty.
+	
+	* src/obmolecformat.cpp: add --addindex
+
+	* src/parsmart.cpp:add onceOnly to SMARTS error
+
+2010-08-02 Chris Morley
 	
 	* include/openbabel/obconversion.h,include/openbabel/op.h,
 	include/openbabel/plugin.h,src/plugin.cpp,src/obconversion.cpp:
