Small rearrangement of OBMoleculeFormat code
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3925 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2010-08-02 Chris Morley
 
+	* include/openbabel/obmolecformat.h,src/obmolecformat.cpp
+	(WriteChemObjectImpl) move the option implementation to a
+	separate function so that it can be used externally...
+
+	* src/formats/svgformat.cpp: ...like here. 
+
+2010-08-02 Chris Morley
+
 	* src/descriptors/filters.cpp: add new formula descriptor
 
 	* src/transform.cpp: remove --addformula, use --append formula
