--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,18 @@
+2010-08-03  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* scripts/CMakeLists.txt: Patch from Wayne Volkmuth to fix use of
+	PYTHON_PREFIX PR#3038634.
+
 2010-08-03 Chris Morley
+
 	* src/ops/opisomorph.cpp:-s replacement. Is used instead of
 	original in transform.cpp. Takes a SMARTS string as before,
 	but also a molecule file when the matching is done by Tim's
 	new isomorphism code which is less restrictive, e.g. bug#3029478
 	Also will color the substructure, mainly for svgformat.
-	 
+
 	* src/CMakeLists.txt: add the above file
-	
+
 	* src/formats/fastsearchformat.cpp: rearraged to use the new -s
 	as the main target specification.
 
@@ -24,7 +30,7 @@
 	(WriteChemObjectImpl) move the option implementation to a
 	separate function so that it can be used externally...
 
-	* src/formats/svgformat.cpp: ...like here. 
+	* src/formats/svgformat.cpp: ...like here.
 
 2010-08-02 Chris Morley
 
@@ -32,26 +38,26 @@
 
 	* src/transform.cpp: remove --addformula, use --append formula
 	  Make -s option do nothing if parameter is empty.
-	
+
 	* src/obmolecformat.cpp: add --addindex
 
 	* src/parsmart.cpp:add onceOnly to SMARTS error
 
 2010-08-02 Chris Morley
-	
+
 	* include/openbabel/obconversion.h,include/openbabel/op.h,
 	include/openbabel/plugin.h,src/plugin.cpp,src/obconversion.cpp:
 	added some extra documentation on the OBPlugin concept and options
 	as suggested by Hans deWinter
-	
+
 	* doc/examples/obfingerprint_getfingerprint.cpp: added an
 	example file
-	
+
 	I haven't got doxygen working yet on my computer (do we really need
-	latex?)	so the formatting of the above may need attention.
+	latex?) so the formatting of the above may need attention.
 
 2010-08-01 Chris Morley
-	
+
 	* data/svgformat.script: make zoom work with Chrome
 
 	* src/formats/svgformat.cpp: Make using internal color data the
@@ -62,8 +68,8 @@
 
 	* tools/obabel.cpp, tools/babel.cpp: allow e.g. '-L formats cml'
 	in addition to '-L cml' to handle cases where the same name is used
-	for two plugins	of different types.
-	 
+	for two plugins of different types.
+
 	* src/GUI/OBGUI.cpp: now menu always returns details of plugin of
 	the correct type.
 
