* src/formats/moldenformat.cpp: Add "molf" extension found with         some example files.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3939 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,12 @@
 	* scripts/CMakeLists.txt: Patch from Wayne Volkmuth to fix use of
 	PYTHON_PREFIX PR#3038634.
 
+	* scripts/openbabel-csharp.i: Fixed moduleclass error broken with
+	upgrade to SWIG 2.0.0.
+
+	* src/formats/moldenformat.cpp: Add "molf" extension found with
+	some example files.
+
 2010-08-03 Chris Morley
 
 	* src/ops/opisomorph.cpp:-s replacement. Is used instead of
