Bug in --gen2D corrected by Sergei Trepalin
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3957 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-08-09 Chris Morley
+
+	* src/mcdlutil.cpp: fix to bug #3041650 (2D coordinates with
+	disconnected molecules), provided by Sergei Trepalin.
+
 2010-08-09  Noel O'Boyle
 
 	* test/aligntest.cpp: Enable all parts of the alignment test
