* src/builder.cpp, include/openbabel/builder.h: Add a Set/Unset method 	for keeprings. This allows the user to keep the ring conformation from 	the input molecule (this only makes sense if it's a 3D structure to 	begin with).
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3959 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-08-10  Noel O'Boyle
+
+	* src/builder.cpp, include/openbabel/builder.h: Add a Set/Unset method
+	for keeprings. This allows the user to keep the ring conformation from
+	the input molecule (this only makes sense if it's a 3D structure to
+	begin with). 
+
 2010-08-09 Chris Morley
 
 	* src/mcdlutil.cpp: fix to bug #3041650 (2D coordinates with
