Comment out inconsistent use of OBMol::SetEnergy(double)
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3962 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-08-09 Chris Morley
+
+	* src/formats/gaussformat.cpp:Comment out inconsistent use of
+	OBMol::SetEnergy(double).
+	
+	The use of this needs to be agreed.
+	
 2010-08-10 Tim Vandermeersch
 
 	* include/openbabel/rotor.h, src/rotor.cpp: Add method to fix bonds 
