git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3974 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-08-13 Chris Morley
+
+	* src/formats/inchiformat.cpp(ReadMolecule):Use GetStructFromINCHI
+	and not GetStructFromStdINCHI so can read both standard and
+	non-standard InChIs. Make error handling more robust.
+
 2010-08-13 Noel O'Boyle
 
 	* src/mol.cpp: HasHydrogens() never returned True as the flag was
